# SatsuranceTask

./: Cargo.toml  README.md  dfx.json  package-lock.json
src/staking_pool_backend/: Cargo.toml  staking_pool_backend.did
src/staking_pool_backend/src/: lib.rs
